--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -79,7 +79,8 @@ body {
       }
     }
 
-    .registration-box {
+    .registration-box,
+    .login-box {
       display: flex;
       flex-direction: column;
       width: 425px;
@@ -89,37 +90,39 @@ body {
       position: absolute;
       top: 200px;
       right: 260px;
+    }
 
-      h2 {
-        font-size: 50px;
-        margin-bottom: 65px;
-        font-weight: normal;
-        text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
+    .registration-box h2,
+    .login-box h2 {
+      font-size: 50px;
+      margin-bottom: 65px;
+      font-weight: normal;
+      text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
+      text-align: center;
+    }
+
+    .form {
+      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+
+      input {
+        width: 356px;
+        height: 47px;
+        border: none;
+        text-align: center;
+        font-size: 25px;
+        margin-bottom: 25px;
       }
 
-      #register-form {
-        margin: 0 auto;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-
-        input {
-          width: 356px;
-          height: 47px;
-          border: none;
-          text-align: center;
-          font-size: 25px;
-          margin-bottom: 25px;
-        }
-
-        button {
-          width: 356px;
-          height: 65px;
-          color: $font-color;
-          background-color: $bg-color;
-          border: none;
-          font-size: 30px;
-        }
+      button {
+        width: 356px;
+        height: 65px;
+        color: $font-color;
+        background-color: $bg-color;
+        border: none;
+        font-size: 30px;
       }
     }
   }
