Added box with rooms list and css for this element

--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -194,7 +194,8 @@ body {
       }
     }
 
-    .treamtments-box {
+    .treamtments-box,
+    .rooms-box {
       display: flex;
       flex-direction: column;
       width: 600px;
