--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -195,7 +195,8 @@ body {
     }
 
     .treamtments-box,
-    .rooms-box {
+    .rooms-box,
+    .treamtment-box {
       display: flex;
       flex-direction: column;
       width: 600px;
@@ -225,6 +226,29 @@ body {
       li:hover {
         cursor: pointer;
         opacity: 0.7;
+      }
+    }
+
+    p {
+      font-size: 25px;
+      line-height: 1.6;
+      margin-bottom: 90px;
+
+      span {
+        font-weight: bold;
+      }
+    }
+
+    button {
+      background-color: $font-color;
+      color: $edit-color;
+      font-weight: bold;
+      font-size: 30px;
+      padding: 20px;
+
+      &:hover {
+        opacity: 0.7;
+        cursor: pointer;
       }
     }
   }
