--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -103,6 +103,8 @@ body {
       font-weight: normal;
       text-shadow: $text-shadow;
       text-align: center;
+      color: $font-color;
+      text-transform: none;
     }
 
     .form {
@@ -122,11 +124,68 @@ body {
 
       button {
         width: 356px;
-        height: 65px;
         color: $font-color;
         background-color: $bg-color;
         border: none;
         font-size: 30px;
+      }
+
+      /* Checking strong of password */
+      .visualInfo {
+        margin-bottom: 10px;
+        text-shadow: $text-shadow;
+      }
+
+      .info {
+        width: 100%;
+        text-align: center;
+      }
+
+      span {
+        display: flex;
+        width: 75px;
+        height: 20px;
+      }
+
+      .weak {
+        background-color: $font-color;
+        display: inline-block;
+      }
+
+      .average {
+        background-color: $font-color;
+        display: inline-block;
+      }
+
+      .strong {
+        background-color: $font-color;
+        display: inline-block;
+      }
+
+      .legend {
+        display: flex;
+        font-size: 1em;
+        margin-bottom: 30px;
+        text-shadow: $text-shadow;
+      }
+
+      .legend span {
+        width: 20px;
+        margin-right: 5px;
+      }
+
+      .weakCol {
+        background-color: #f57648;
+      }
+
+      .averageCol {
+        background-color: yellow;
+        margin-left: 10px;
+      }
+
+      .strongCol {
+        background-color: greenyellow;
+        margin-left: 10px;
       }
     }
 
