Added scss files for every element on page and import these files in it-spa.scss file

--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -1,449 +1,12 @@
-$font-color: #fff;
-$input-text-color: #829294;
-$edit-color: #e654f6;
-$button-color: #f504d5;
-$active-color: #7ff2ee;
-$title-color: #baf8f6;
-$bg-color: #116771;
-$slogan-shadow: 5px 5px 5px rgba(0, 0, 0, 0.6);
-$text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-body {
-  color: $font-color;
-  width: 100vw;
-  height: 100vh;
-  background: $active-color url("../src/assets/img/pigispa-bg.jpg") no-repeat
-    fixed;
-  background-position: 0 -100px;
-  background-size: cover;
-  height: 100vh;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  font-family: "Segoe UI", sans-serif;
-
-  header {
-    width: 100%;
-    height: 100px;
-    background-color: $bg-color;
-    opacity: 0.9;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 70px;
-    align-items: center;
-
-    #logo img {
-      width: 149px;
-      height: auto;
-
-      &:hover {
-        opacity: 0.7;
-      }
-    }
-
-    nav {
-      font-size: 24px;
-      a {
-        color: $font-color;
-        text-decoration: none;
-        padding: 0 20px;
-
-        &:hover {
-          color: $active-color;
-        }
-
-        &:active {
-          color: $active-color;
-        }
-      }
-    }
-  }
-
-  section {
-    width: 100%;
-
-    .slogan {
-      font-size: 45px;
-      text-align: center;
-      width: 100%;
-      position: absolute;
-      bottom: 150px;
-      font-style: italic;
-      text-shadow: $slogan-shadow;
-
-      .pink {
-        color: $edit-color;
-        font-weight: bold;
-      }
-    }
-
-    .registration-box,
-    .login-box {
-      display: flex;
-      flex-direction: column;
-      width: 425px;
-      justify-self: center;
-      margin: 0 auto;
-      flex-wrap: wrap;
-      position: absolute;
-      top: 200px;
-      right: 260px;
-    }
-
-    .registration-box h2,
-    .login-box h2 {
-      font-size: 50px;
-      margin-bottom: 65px;
-      font-weight: normal;
-      text-shadow: $text-shadow;
-      text-align: center;
-      color: $font-color;
-      text-transform: none;
-    }
-
-    /* For info about not the same password */
-    #info-pass {
-      text-align: center;
-      width: 85%;
-      color: #f504d5;
-      font-size: 1.4rem;
-      font-weight: bold;
-      position: relative;
-      top: -30px;
-      background-color: transparent;
-      padding: 10px;
-      margin: 0 auto;
-    }
-
-    .form {
-      margin: 0 auto;
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-
-      input {
-        width: 356px;
-        height: 47px;
-        border: none;
-        text-align: center;
-        font-size: 25px;
-        margin-bottom: 25px;
-      }
-
-      button {
-        width: 356px;
-        color: $font-color;
-        background-color: $bg-color;
-        border: none;
-        font-size: 30px;
-      }
-
-      /* Checking strength of password */
-      .visualInfo {
-        margin-bottom: 10px;
-        text-shadow: $text-shadow;
-      }
-
-      .info {
-        width: 100%;
-        text-align: center;
-      }
-
-      span {
-        display: flex;
-        width: 75px;
-        height: 20px;
-      }
-
-      .weak,
-      .average,
-      .strong {
-        background-color: $font-color;
-        display: inline-block;
-      }
-
-      .legend {
-        display: flex;
-        justify-content: center;
-        align-content: center;
-        font-size: 1.1em;
-        margin-bottom: 30px;
-        color: $bg-color;
-        font-weight: bold;
-      }
-
-      .legend span {
-        width: 20px;
-        margin-right: 5px;
-      }
-
-      .weakCol {
-        background-color: #f504d5;
-      }
-
-      .averageCol {
-        background-color: yellow;
-        margin-left: 10px;
-      }
-
-      .strongCol {
-        background-color: greenyellow;
-        margin-left: 10px;
-      }
-    }
-
-    .welcome-box-after-register {
-      display: flex;
-      flex-direction: column;
-      width: 470px;
-      justify-self: center;
-      margin: 0 auto;
-      flex-wrap: wrap;
-      position: absolute;
-      top: 350px;
-      right: 220px;
-      font-size: 40px;
-      text-shadow: $text-shadow;
-    }
-
-    .welcome-box-after-login,
-    .thanks-box-after-payment {
-      display: flex;
-      flex-direction: column;
-      width: 460px;
-      justify-self: center;
-      margin: 0 auto;
-      flex-wrap: wrap;
-      position: absolute;
-      top: 200px;
-      left: 70px;
-      text-shadow: $text-shadow;
-
-      h2 {
-        font-size: 50px;
-        margin-bottom: 55px;
-        font-weight: normal;
-        text-transform: none;
-        color: $font-color;
-      }
-
-      p {
-        font-size: 35px;
-      }
-    }
-
-    .basket-box {
-      display: flex;
-      flex-direction: column;
-      width: 425px;
-      margin: 0 auto;
-      flex-wrap: wrap;
-      position: absolute;
-      right: 0;
-      top: 100px;
-      text-align: center;
-      height: calc(100% - 168px);
-      background-color: $font-color;
-      color: $input-text-color;
-
-      h2 {
-        color: $edit-color;
-        font-size: 30px;
-        padding-top: 45px;
-        padding-bottom: 25px;
-        font-weight: bold;
-        margin-bottom: 0;
-      }
-
-      p {
-        font-size: 25px;
-      }
-
-      #basket-content-box,
-      #basket-bought-content-box {
-        ol {
-          width: 90%;
-          margin-left: 5%;
-          li {
-            font-size: 18px;
-            width: 100%;
-            position: relative;
-            line-height: 2.2;
-
-            &:hover {
-              opacity: 1;
-            }
-
-            .quant {
-              color: $edit-color;
-              margin-left: 3px;
-
-              &:hover {
-                opacity: 0.7;
-              }
-            }
-
-            .price {
-              position: absolute;
-              top: 0;
-              right: 40px;
-              font-weight: bold;
-            }
-
-            .remove {
-              display: inline-block;
-              flex-direction: row;
-              justify-content: flex-end;
-              background: transparent url("../src/assets/img/trash-pink.png")
-                top center no-repeat;
-              background-size: cover;
-              width: 20px;
-              height: 24px;
-              position: absolute;
-              top: 4px;
-              right: 5px;
-
-              &:hover {
-                opacity: 0.7;
-              }
-            }
-
-            .term {
-              color: $edit-color;
-
-              &:hover {
-                opacity: 0.7;
-              }
-            }
-          }
-        }
-
-        .summary-text {
-          text-transform: uppercase;
-          margin-top: 60px;
-          font-weight: bold;
-          font-size: 20px;
-
-          span {
-            font-size: 30px;
-          }
-        }
-
-        button {
-          background-color: $button-color;
-          color: $font-color;
-          font-size: 40px;
-          font-weight: bold;
-          width: 100%;
-          position: absolute;
-          bottom: 0;
-          right: 0;
-          border: 0;
-
-          &:hover {
-            opacity: 0.7;
-          }
-        }
-      }
-    }
-
-    .treamtments-box,
-    .rooms-box,
-    .treamtment-box,
-    .room-box {
-      display: flex;
-      flex-direction: column;
-      width: 600px;
-      flex-wrap: wrap;
-      position: absolute;
-      left: 70px;
-      top: 200px;
-      background-color: $bg-color;
-      opacity: 0.9;
-      padding: 50px 70px 70px 90px;
-    }
-
-    h2 {
-      font-size: 40px;
-      margin-bottom: 45px;
-      font-weight: normal;
-      text-transform: uppercase;
-      color: $title-color;
-    }
-
-    ol {
-      font-size: 28px;
-      padding-left: 25px;
-      text-align: left;
-      line-height: 1.6;
-
-      li:hover {
-        cursor: pointer;
-        opacity: 0.7;
-      }
-    }
-
-    p {
-      font-size: 25px;
-      line-height: 1.6;
-      margin-bottom: 90px;
-
-      span {
-        font-weight: bold;
-      }
-
-      input {
-        padding: 5px;
-        font-size: 20px;
-        color: $input-text-color;
-        border: none;
-
-        margin-top: 10px;
-      }
-
-      #room-to {
-        margin-left: 16px;
-      }
-    }
-
-    button {
-      background-color: $font-color;
-      color: $edit-color;
-      font-weight: bold;
-      font-size: 30px;
-      padding: 20px;
-
-      &:hover {
-        opacity: 0.7;
-        cursor: pointer;
-      }
-    }
-  }
-
-  footer {
-    width: 100vw;
-    height: 68px;
-    background-color: $bg-color;
-    opacity: 0.9;
-    position: absolute;
-    bottom: 0;
-    opacity: 0.9;
-    display: flex;
-    padding: 0 70px;
-    align-items: center;
-
-    a img {
-      width: 200px;
-
-      &:hover {
-        opacity: 0.7;
-      }
-    }
-  }
-}
+@import "./assets/styles/_scss/variables";
+@import "./assets/styles/_scss/reset";
+@import "./assets/styles/_scss/base";
+@import "./assets/styles/_scss/section";
+@import "./assets/styles/_scss/slogan";
+@import "./assets/styles/_scss/register_and_login_box";
+@import "./assets/styles/_scss/info_err";
+@import "./assets/styles/_scss/form";
+@import "./assets/styles/_scss/welcome_boxes";
+@import "./assets/styles/_scss/basket";
+@import "./assets/styles/_scss/treatments_and_rooms_box";
+@import "./assets/styles/_scss/footer";
