--- a/src/assets/styles/_scss/_basket.scss
+++ b/src/assets/styles/_scss/_basket.scss
@@ -41,18 +41,14 @@
         }
 
         .quant {
-          color: $edit-color;
-          margin-left: 3px;
-
-          &:hover {
-            opacity: 0.7;
-          }
+          color: $input-text-color;
+          width: 40px;
         }
 
         .price {
-          position: absolute;
-          top: 0;
-          right: 40px;
+          // position: absolute;
+          // top: 0;
+          // right: 40px;
           font-weight: bold;
         }
 
