--- a/src/assets/styles/_scss/_info_err.scss
+++ b/src/assets/styles/_scss/_info_err.scss
@@ -3,7 +3,7 @@
   text-align: center;
   width: 85%;
   color: #f504d5;
-  font-size: 1.4rem;
+  font-size: $xs-size * 4;
   font-weight: bold;
   position: relative;
   top: -30px;
