--- a/src/assets/styles/_scss/_variables.scss
+++ b/src/assets/styles/_scss/_variables.scss
@@ -1,3 +1,4 @@
+// Colors
 $font-color: #fff;
 $input-text-color: #829294;
 $edit-color: #e654f6;
@@ -5,5 +6,15 @@ $button-color: #f504d5;
 $active-color: #7ff2ee;
 $title-color: #baf8f6;
 $bg-color: #116771;
+
+// Shadows
 $slogan-shadow: 5px 5px 5px rgba(0, 0, 0, 0.6);
 $text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.4);
+
+// Sizes
+
+$xs-size: 5px;
+$s-size: 16px;
+$m-size: 18px;
+$l-size: 24px;
+$xl-size: 28px;
