--- a/src/assets/styles/_scss/_form.scss
+++ b/src/assets/styles/_scss/_form.scss
@@ -9,8 +9,8 @@
     height: 47px;
     border: none;
     text-align: center;
-    font-size: 25px;
-    margin-bottom: 25px;
+    font-size: $xs-size * 5;
+    margin-bottom: $xs-size * 5;
   }
 
   button {
@@ -18,8 +18,8 @@
     color: $font-color;
     background-color: $bg-color;
     border: none;
-    font-size: 30px;
-    padding: 15px 0;
+    font-size: $xs-size * 6;
+    padding: $xs-size * 3 0;
 
     &:hover {
       opacity: 0.7;
@@ -41,7 +41,7 @@
   span {
     display: flex;
     width: 75px;
-    height: 20px;
+    height: $xs-size * 4;
   }
 
   .weak,
@@ -56,14 +56,15 @@
     justify-content: center;
     align-content: center;
     font-size: 1.1em;
-    margin-bottom: 30px;
+    margin-bottom: $xs-size * 6;
     color: $bg-color;
     font-weight: bold;
   }
 
   .legend span {
-    width: 20px;
-    margin-right: 5px;
+    // width: 20px;
+    width: $xs-size * 4;
+    margin-right: $xs-size;
   }
 
   .weakCol {
@@ -72,11 +73,11 @@
 
   .averageCol {
     background-color: yellow;
-    margin-left: 10px;
+    margin-left: $xs-size * 2;
   }
 
   .strongCol {
     background-color: greenyellow;
-    margin-left: 10px;
+    margin-left: $xs-size * 2;
   }
 }
