--- a/src/assets/styles/_scss/_register_and_login_box.scss
+++ b/src/assets/styles/_scss/_register_and_login_box.scss
@@ -13,7 +13,7 @@
 
 .registration-box h2,
 .login-box h2 {
-  font-size: 50px;
+  font-size: $xs-size * 10;
   margin-bottom: 65px;
   font-weight: normal;
   text-shadow: $text-shadow;
