--- a/src/assets/styles/_scss/_base.scss
+++ b/src/assets/styles/_scss/_base.scss
@@ -1,8 +1,8 @@
 body {
   color: $font-color;
-  background: $active-color url("../src/assets/img/pigispa-bg.jpg") no-repeat
-    fixed;
-  background-position: 0 -100px;
+  background: $active-color url("../src/assets/img/pigispa-bg-small.jpg")
+    no-repeat fixed;
+  background-position: 0 0;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -11,39 +11,19 @@ body {
   overflow: hidden;
   width: 100vw;
 
-  h2 {
-    color: $title-color;
-    font-size: $xs-size * 8;
-    font-weight: normal;
-    margin-bottom: $xs-size * 9;
-    text-transform: uppercase;
-  }
-
-  ol {
-    font-size: $xl-size;
-    line-height: 1.6;
-    padding-left: $xs-size * 5;
-    text-align: left;
-
-    li:hover {
-      cursor: pointer;
-      opacity: 0.7;
-    }
-  }
-
   header {
     align-items: center;
     background-color: $bg-color;
     display: flex;
-    height: 100px;
+    height: 70px;
     justify-content: space-between;
     opacity: 0.9;
-    padding: 0 $xs-size * 14;
+    padding: 0 $xs-size * 2;
     width: 100%;
 
     #logo img {
       height: auto;
-      width: 149px;
+      width: 100px;
 
       &:hover {
         opacity: 0.7;
@@ -51,7 +31,7 @@ body {
     }
 
     nav {
-      font-size: $l-size;
+      font-size: $xs-size * 4;
       a {
         color: $font-color;
         padding: 0 $xs-size * 4;
@@ -64,6 +44,26 @@ body {
         &:active {
           color: $active-color;
         }
+      }
+    }
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  body {
+    background: $active-color url("../src/assets/img/pigispa-bg.jpg") no-repeat
+      fixed;
+    background-position: 0 -100px;
+    header {
+      padding: 0 $xs-size * 14;
+      height: 100px;
+
+      #logo img {
+        width: 149px;
+      }
+
+      nav {
+        font-size: $l-size;
       }
     }
   }
