--- a/src/assets/styles/_scss/_footer.scss
+++ b/src/assets/styles/_scss/_footer.scss
@@ -5,15 +5,25 @@ footer {
   display: flex;
   height: 68px;
   opacity: 0.9;
-  padding: 0 70px;
+  padding: 0 10px;
   position: absolute;
   width: 100vw;
 
   a img {
-    width: 200px;
+    width: 150px;
 
     &:hover {
       opacity: 0.7;
+    }
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  footer {
+    padding: 0 70px;
+
+    a img {
+      width: 200px;
     }
   }
 }
