--- a/src/assets/styles/_scss/_form.scss
+++ b/src/assets/styles/_scss/_form.scss
@@ -2,24 +2,24 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 auto;
+  margin: 0;
 
   input {
     border: none;
-    font-size: $xs-size * 5;
+    font-size: $xs-size * 4;
     height: 47px;
     margin-bottom: $xs-size * 5;
     text-align: center;
-    width: 356px;
+    width: 100%;
   }
 
   button {
     background-color: $bg-color;
     border: none;
     color: $font-color;
-    font-size: $xs-size * 6;
+    font-size: $xs-size * 4;
     padding: $xs-size * 3 0;
-    width: 356px;
+    width: 100%;
 
     &:hover {
       cursor: pointer;
@@ -53,7 +53,7 @@
 
   .legend {
     align-content: center;
-    color: $bg-color;
+    color: #fff;
     display: flex;
     font-size: 1.1em;
     font-weight: bold;
@@ -78,5 +78,25 @@
   .strongCol {
     background-color: greenyellow;
     margin-left: $xs-size * 2;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  form {
+    margin: 0 auto;
+    input {
+      border: none;
+      font-size: $xs-size * 5;
+      height: 47px;
+      width: 356px;
+    }
+    button {
+      font-size: $xs-size * 6;
+      padding: $xs-size * 3 0;
+      width: 356px;
+    }
+    .legend {
+      color: $bg-color;
+    }
   }
 }
