--- a/src/assets/styles/_scss/_treatments_and_rooms_box.scss
+++ b/src/assets/styles/_scss/_treatments_and_rooms_box.scss
@@ -6,17 +6,37 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  left: $xs-size * 14;
+  left: 5%;
   opacity: 0.9;
-  padding: 50px 70px 70px 90px;
+  padding: 25px;
   position: absolute;
-  top: 200px;
-  width: 600px;
+  top: 100px;
+  width: 90%;
+
+  h2 {
+    color: $title-color;
+    font-size: $xs-size * 5;
+    font-weight: normal;
+    margin-bottom: $xs-size * 6;
+    text-transform: uppercase;
+  }
+
+  ol {
+    font-size: $xs-size * 4;
+    line-height: 1.6;
+    padding-left: $xs-size * 5;
+    text-align: left;
+
+    li:hover {
+      cursor: pointer;
+      opacity: 0.7;
+    }
+  }
 
   p {
-    font-size: $xs-size * 5;
+    font-size: $xs-size * 4;
     line-height: 1.6;
-    margin-bottom: $xs-size * 8;
+    margin-bottom: $xs-size * 6;
 
     span {
       font-weight: bold;
@@ -28,23 +48,64 @@
       font-size: $xs-size * 4;
       margin-top: $xs-size * 2;
       padding: $xs-size;
+      width: 100%;
     }
 
     #room-to {
-      margin-left: $s-size;
+      margin-left: 0;
     }
   }
 
   button {
     background-color: $font-color;
     color: $edit-color;
-    font-size: $xs-size * 6;
+    font-size: $xs-size * 5;
     font-weight: bold;
-    padding: $xs-size * 4;
+    padding: $xs-size * 3;
 
     &:hover {
       cursor: pointer;
       opacity: 0.7;
+    }
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .treamtments-box,
+  .rooms-box,
+  .treamtment-box,
+  .room-box {
+    left: $xs-size * 14;
+    padding: 50px 70px 70px 90px;
+    top: 200px;
+    width: 600px;
+
+    h2 {
+      font-size: $xs-size * 8;
+      margin-bottom: $xs-size * 9;
+    }
+
+    ol {
+      font-size: $xl-size;
+    }
+
+    p {
+      font-size: $xs-size * 5;
+      line-height: 1.6;
+      margin-bottom: $xs-size * 8;
+    }
+
+    input {
+      width: auto;
+
+      #room-to {
+        margin-left: $s-size;
+      }
+    }
+
+    button {
+      font-size: $xs-size * 6;
+      padding: $xs-size * 4;
     }
   }
 }
