--- a/src/assets/styles/_scss/_welcome_boxes.scss
+++ b/src/assets/styles/_scss/_welcome_boxes.scss
@@ -2,14 +2,15 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  font-size: $xs-size * 8;
+  font-size: $xs-size * 5;
   justify-self: center;
   margin: 0 auto;
   position: absolute;
-  right: 220px;
+  right: 5%;
   text-shadow: $text-shadow;
-  top: 350px;
-  width: 470px;
+  top: 90px;
+  width: 90%;
+  line-height: 1.4;
 }
 
 .welcome-box-after-login,
@@ -18,22 +19,49 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-self: center;
-  left: 70px;
-  margin: 0 auto;
+  left: 0;
+  margin: 0 0 0 5%;
   position: absolute;
   text-shadow: $text-shadow;
-  top: 200px;
-  width: 460px;
+  top: 100px;
+  width: 90%;
 
   h2 {
     color: $font-color;
-    font-size: $xs-size * 10;
+    font-size: $xs-size * 7;
     font-weight: normal;
-    margin-bottom: $xs-size * 11;
+    margin-bottom: $xs-size * 8;
     text-transform: none;
   }
 
   p {
-    font-size: $xs-size * 7;
+    font-size: $xs-size * 5;
+    line-height: 1.4;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .welcome-box-after-register {
+    font-size: $xs-size * 8;
+    right: 220px;
+    top: 350px;
+    width: 470px;
+    line-height: auto;
+  }
+  .welcome-box-after-login,
+  .thanks-box-after-payment {
+    left: 70px;
+    top: 200px;
+    width: 460px;
+
+    h2 {
+      font-size: $xs-size * 10;
+      margin-bottom: $xs-size * 11;
+    }
+
+    p {
+      font-size: $xs-size * 7;
+      line-height: auto;
+    }
   }
 }
