--- a/src/assets/styles/_scss/_slogan.scss
+++ b/src/assets/styles/_scss/_slogan.scss
@@ -15,9 +15,9 @@
 }
 
 @media only screen and (min-width: 800px) {
-  .sloagn {
+  .slogan {
     bottom: 150px;
-    font-size: $xs-size * 9;
+    font-size: $xs-size * 8;
     width: 100%;
     margin-left: 0;
   }
