Added code for registration component and create new component for registration form

--- a/src/assets/styles/_scss/_base.scss
+++ b/src/assets/styles/_scss/_base.scss
@@ -11,6 +11,10 @@ body {
   overflow: hidden;
   width: 100vw;
 
+  a:hover {
+    cursor: pointer;
+  }
+
   header {
     align-items: center;
     background-color: $bg-color;
