--- a/src/it-spa.scss
+++ b/src/it-spa.scss
@@ -9,4 +9,5 @@
 @import "./assets/styles/_scss/welcome_boxes";
 @import "./assets/styles/_scss/basket";
 @import "./assets/styles/_scss/treatments_and_rooms_box";
+@import "./assets/styles/_scss/treatment_and_room_box";
 @import "./assets/styles/_scss/footer";
