--- a/src/assets/styles/_scss/_treatment_and_room_box.scss
+++ b/src/assets/styles/_scss/_treatment_and_room_box.scss
@@ -1,4 +1,4 @@
-.treamtment-box,
+.treatment-box,
 .room-box {
   background-color: $bg-color;
   display: flex;
@@ -56,7 +56,7 @@
 }
 
 @media only screen and (min-width: 800px) {
-  .treamtment-box,
+  .treatment-box,
   .room-box {
     left: 700px;
     padding: 50px 70px 70px 90px;
