Added style css for user manu after login

--- a/src/assets/styles/_scss/_base.scss
+++ b/src/assets/styles/_scss/_base.scss
@@ -86,6 +86,12 @@ body {
 
       nav {
         font-size: $l-size;
+
+        // Styles for user menu
+        .menu-link[style="visibility: visible;"] {
+          position: relative;
+          right: -200px;
+        }
       }
     }
   }
