Added css styles to display user menu on right side of screen

--- a/src/assets/styles/_scss/_base.scss
+++ b/src/assets/styles/_scss/_base.scss
@@ -89,8 +89,8 @@ body {
 
         // Styles for user menu
         .menu-link[style="visibility: visible;"] {
-          position: relative;
-          right: -200px;
+          position: absolute;
+          right: 50px;
         }
       }
     }
